skills, projects, contact ok. Next step: about and banner

--- a/index.html
+++ b/index.html
@@ -35,13 +35,23 @@
           PostgreSQL. I also play with Raspberry Pi and am learning basics of
           cybersecurity.
         </p>
-        <p>
-          <a href="https://www.linkedin.com/in/joris-lefait/" target="_blank"
-            >LinkedIn</a
-          >
-          |
-          <a href="https://github.com/Joris-Lft" target="_blank">GitHub</a>
-        </p>
+        <div>
+          <p>
+            <a
+              href="https://www.linkedin.com/in/joris-lefait/"
+              target="_blank"
+              class="button"
+              >LinkedIn</a
+            >
+
+            <a
+              href="https://github.com/Joris-Lft"
+              target="_blank"
+              class="button"
+              >GitHub</a
+            >
+          </p>
+        </div>
       </section>
 
       <section id="skills">
@@ -57,8 +67,9 @@
       <section id="contact">
         <h2>Contact</h2>
         <p>
-          Email:
-          <a href="mailto:contact@joris-lefait.com">contact@joris-lefait.com</a>
+          <a href="mailto:contact@joris-lefait.com" class="button"
+            >Let's talk !</a
+          >
         </p>
       </section>
     </main>
