responsive masonry effect ok

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <h2>Contact</h2>
         <p>
           <a href="mailto:contact@joris-lefait.com" class="button"
-            >Let's talk !</a
+            >Let's talk about your project !</a
           >
         </p>
       </section>
