--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
   </head>
   <body>
     <nav>
-      <ul>
+      <div class="hamburger">
+        <div class="bar"></div>
+        <div class="bar"></div>
+        <div class="bar"></div>
+      </div>
+      <ul class="nav-menu">
         <li><a href="#">Home</a></li>
         <li><a href="#about">About me</a></li>
         <li><a href="#skills">Skills</a></li>
