handle images - next step: create images

--- a/index.html
+++ b/index.html
@@ -26,36 +26,48 @@
       </ul>
     </nav>
 
-    <header>
-      <h1>Welcome onboard !</h1>
+    <header class="banner">
+      <div class="banner-content">
+        <h1>Joris Lefait - Web Developer</h1>
+      </div>
     </header>
 
     <main>
       <section id="about">
-        <h2>About me</h2>
-        <p>
-          I'm Joris. I started my career in programming in 2019 after some years
-          working in chemistry. I was first a front-end developer and then I
-          started learning back-end development with Node.js, Express.js and
-          PostgreSQL. I also play with Raspberry Pi and am learning basics of
-          cybersecurity.
-        </p>
-        <div>
-          <p>
-            <a
-              href="https://www.linkedin.com/in/joris-lefait/"
-              target="_blank"
-              class="button"
-              >LinkedIn</a
-            >
-
-            <a
-              href="https://github.com/Joris-Lft"
-              target="_blank"
-              class="button"
-              >GitHub</a
-            >
-          </p>
+        <div class="about-container">
+          <div class="avatar-container">
+            <img
+              src="https://images.unsplash.com/photo-1504164996022-09080787b6b3?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+              alt="Avatar de Joris"
+              class="avatar"
+            />
+          </div>
+          <div class="about-text">
+            <h2>About me</h2>
+            <p>
+              I'm Joris. I started my career in programming in 2019 after some
+              years working in chemistry. I was first a front-end developer and
+              then I started learning back-end development with Node.js,
+              Express.js and PostgreSQL. I also play with Raspberry Pi and am
+              learning basics of cybersecurity.
+            </p>
+            <div>
+              <p>
+                <a
+                  href="https://www.linkedin.com/in/joris-lefait/"
+                  target="_blank"
+                  class="button"
+                  >LinkedIn</a
+                >
+                <a
+                  href="https://github.com/Joris-Lft"
+                  target="_blank"
+                  class="button"
+                  >GitHub</a
+                >
+              </p>
+            </div>
+          </div>
         </div>
       </section>
 
