add banner, n8n, update style

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <header class="banner">
       <div class="banner-content">
-        <h1>Joris Lefait - Web Developer</h1>
+        <!-- <h1>Joris Lefait - Web Developer</h1> -->
       </div>
     </header>
 
@@ -54,17 +54,23 @@
             <div>
               <p>
                 <a
+                  href="https://www.malt.fr/profile/jorislefait"
+                  target="_blank"
+                  class="button"
+                  >Malt</a
+                >
+                <a
                   href="https://www.linkedin.com/in/joris-lefait/"
                   target="_blank"
                   class="button"
                   >LinkedIn</a
                 >
-                <a
+                <!-- <a
                   href="https://github.com/Joris-Lft"
                   target="_blank"
                   class="button"
                   >GitHub</a
-                >
+                > -->
               </p>
             </div>
           </div>
@@ -89,6 +95,9 @@
           >
         </p>
       </section>
+      <footer>
+        <p>&copy; 2025 Joris Lefait. All rights reserved.</p>
+      </footer>
     </main>
 
     <script src="script.js"></script>
