--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     />
+    <link rel="icon" type="image/png" href="assets/JL-white.svg" />
   </head>
   <body>
     <nav>
+      <img src="assets/JL-white.svg" alt="Logo">
+
       <div class="hamburger">
         <div class="bar"></div>
         <div class="bar"></div>
@@ -20,6 +23,7 @@
       <ul class="nav-menu">
         <li><a href="#">Home</a></li>
         <li><a href="#about">About me</a></li>
+        <li><a href="#services">Services</a></li>
         <li><a href="#skills">Skills</a></li>
         <li><a href="#projects">Projects</a></li>
         <li><a href="#contact">Contact</a></li>
@@ -27,13 +31,12 @@
     </nav>
 
     <header class="banner">
-      <div class="banner-content">
-        <!-- <h1>Joris Lefait - Web Developer</h1> -->
-      </div>
+      <div class="banner-content"/>
     </header>
 
     <main>
       <section id="about">
+        <h2>About me</h2>
         <div class="about-container">
           <div class="avatar-container">
             <img
@@ -43,38 +46,73 @@
             />
           </div>
           <div class="about-text">
-            <h2>About me</h2>
             <p>
-              I'm Joris. I started my career in programming in 2019 after some
-              years working in chemistry. I was first a front-end developer and
-              then I started learning back-end development with Node.js,
-              Express.js and PostgreSQL. I also play with Raspberry Pi and am
-              learning basics of cybersecurity.
+              I'm Joris, a passionate Full Stack Web Developer with a background
+              in chemistry and a proven track record since 2019. I specialize in
+              building modern, high-performance websites and scalable back-end
+              solutions using JavaScript, Node.js, Express.js, and PostgreSQL.</br>
+              My expertise extends to API integration, automation, and
+              cybersecurity fundamentals. I thrive on solving complex problems,
+              delivering user-centric digital experiences, and continuously
+              learning new technologies to help businesses grow online.
             </p>
-            <div>
-              <p>
-                <a
-                  href="https://www.malt.fr/profile/jorislefait"
-                  target="_blank"
-                  class="button"
-                  >Malt</a
-                >
-                <a
-                  href="https://www.linkedin.com/in/joris-lefait/"
-                  target="_blank"
-                  class="button"
-                  >LinkedIn</a
-                >
-                <!-- <a
-                  href="https://github.com/Joris-Lft"
-                  target="_blank"
-                  class="button"
-                  >GitHub</a
-                > -->
-              </p>
-            </div>
           </div>
         </div>
+        <div>
+          <p>
+            <a
+              href="https://www.malt.fr/profile/jorislefait"
+              target="_blank"
+              class="button"
+              >Malt</a
+            >
+            <a
+              href="https://www.linkedin.com/in/joris-lefait/"
+              target="_blank"
+              class="button"
+              >LinkedIn</a
+            >
+            <!-- <a
+              href="https://github.com/Joris-Lft"
+              target="_blank"
+              class="button"
+              >GitHub</a
+            > -->
+          </p>
+        </div>
+      </section>
+
+      <section id="services">
+        <h2>Services</h2>
+        <ul id="services-list">
+          <li class="service-card">
+            <img src="assets/JL-white.svg" alt="Web Development" />
+            <h3>Web Development</h3>
+            <p>
+              Modern, responsive websites built for performance and usability.
+            </p>
+          </li>
+          <li class="service-card">
+            <img src="assets/JL-white.svg" alt="API integration" />
+            <h3>API integration</h3>
+            <p>Seamless integration with third-party services and APIs.</p>
+          </li>
+          <li class="service-card">
+            <img src="assets/JL-white.svg" alt="Codebase modernization" />
+            <h3>Codebase modernization</h3>
+            <p>
+              Refactoring and updating legacy codebases for improved performance
+              and maintainability.
+            </p>
+          </li>
+          <li class="service-card">
+            <img src="assets/JL-white.svg" alt="Automations" />
+            <h3>Automations</h3>
+            <p>
+              Streamlining processes and workflows through automation with n8n.
+            </p>
+          </li>
+        </ul>
       </section>
 
       <section id="skills">
@@ -97,6 +135,7 @@
       </section>
       <footer>
         <p>&copy; 2025 Joris Lefait. All rights reserved.</p>
+        <img src="assets/JL-white.svg" alt="Logo">
       </footer>
     </main>
 
