feat: Improve SEO and code quality

--- a/index.html
+++ b/index.html
@@ -3,6 +3,37 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Joris Lefait is a freelance web developer and automation specialist, building functional websites and streamlining business processes with clean code and efficient solutions."
+    />
+    <meta
+      property="og:title"
+      content="Joris Lefait - Web Developer & Automation Expert"
+    />
+    <meta
+      property="og:description"
+      content="Joris Lefait is a freelance web developer and automation specialist, building functional websites and streamlining business processes with clean code and efficient solutions."
+    />
+    <meta
+      property="og:image"
+      content="https://www.jorislefait.com/assets/JL-black.svg"
+    />
+    <meta property="og:url" content="https://www.jorislefait.com" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Joris Lefait - Web Developer & Automation Expert"
+    />
+    <meta
+      name="twitter:description"
+      content="Joris Lefait is a freelance web developer and automation specialist, building functional websites and streamlining business processes with clean code and efficient solutions."
+    />
+    <meta
+      name="twitter:image"
+      content="https://www.jorislefait.com/assets/JL-black.svg"
+    />
     <title>Joris Lefait - Web Developer & Automation Expert</title>
     <link rel="stylesheet" href="style.css" />
     <link
