feat: add WIP banner and new badge for automations

--- a/index.html
+++ b/index.html
@@ -46,6 +46,12 @@
   </head>
   <body>
     <header>
+      <div class="wip-banner">
+        <p>
+          This site is a work in progress. Some features may not be fully
+          functional.
+        </p>
+      </div>
       <nav>
         <div class="logo">
           <a href="#hero"
@@ -100,6 +106,7 @@
             </p>
           </div>
           <div class="service-box">
+            <span class="badge">New</span>
             <i class="fas fa-robot service-icon"></i>
             <h3>Automations</h3>
             <p>
