add legal notice

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
       name="twitter:image"
       content="https://www.jorislefait.com/assets/JL-black.svg"
     />
+    <link rel="icon" href="assets/JL-white.svg" type="image/svg+xml" />
     <title>Joris Lefait - Web Developer & Automation Expert</title>
     <link rel="stylesheet" href="style.css" />
     <link
@@ -349,7 +350,10 @@
     </main>
 
     <footer>
-      <p>&copy; 2025 Joris Lefait. All rights reserved.</p>
+      <p>
+        &copy; 2025 Joris Lefait. All rights reserved. |
+        <a href="legal.html">Legal notice</a>
+      </p>
     </footer>
 
     <script src="script.js"></script>
