add social icons + profile picture

--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Joris Lefait is a freelance web developer and automation specialist, building functional websites and streamlining business processes with clean code and efficient solutions."
+      content="Joris Lefait is a freelance web developer and automation enthusiast, building functional websites and streamlining business processes with clean code and efficient solutions."
     />
     <meta
       property="og:title"
-      content="Joris Lefait - Web Developer & Automation Expert"
+      content="Joris Lefait - Web Developer & Automation Enthusiast"
     />
     <meta
       property="og:description"
-      content="Joris Lefait is a freelance web developer and automation specialist, building functional websites and streamlining business processes with clean code and efficient solutions."
+      content="Joris Lefait is a freelance web developer and automation enthusiast, building functional websites and streamlining business processes with clean code and efficient solutions."
     />
     <meta
       property="og:image"
@@ -24,11 +24,11 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta
       name="twitter:title"
-      content="Joris Lefait - Web Developer & Automation Expert"
+      content="Joris Lefait - Web Developer & Automation Enthusiast"
     />
     <meta
       name="twitter:description"
-      content="Joris Lefait is a freelance web developer and automation specialist, building functional websites and streamlining business processes with clean code and efficient solutions."
+      content="Joris Lefait is a freelance web developer and automation enthusiast, building functional websites and streamlining business processes with clean code and efficient solutions."
     />
     <meta
       name="twitter:image"
@@ -47,12 +47,12 @@
   </head>
   <body>
     <header>
-      <div class="wip-banner">
+      <!-- <div class="wip-banner">
         <p>
           This site is a work in progress. Some features may not be fully
           functional.
         </p>
-      </div>
+      </div> -->
       <nav>
         <div class="logo">
           <a href="#hero"
@@ -73,7 +73,7 @@
       <section id="hero">
         <div class="hero-content">
           <h1>Joris Lefait</h1>
-          <p>Freelance Web Developer & Automation Specialist</p>
+          <p>Freelance Web Developer</p>
           <a href="#contact" class="cta-button">Get in Touch</a>
         </div>
       </section>
@@ -82,16 +82,52 @@
         <h2>About Me</h2>
         <div class="about-content">
           <img
-            src="assets/JL-white.svg"
+            src="assets/profile-picture.jpg"
             alt="Joris Lefait Avatar"
             class="avatar"
           />
           <p>
-            I build beautiful, functional websites and create powerful
-            automations to streamline your business processes. With a passion
-            for clean code and efficient solutions, I help my clients achieve
-            their goals and grow their online presence.
+            I design robust applications tailored to your needs, with a
+            pragmatic and efficient approach. <br />
+            Beyond the code, I integrate business challenges, architecture, and
+            user experience to ensure the success of your project. <br /><br />
+            As both a front-end and back-end developer, I like to have a
+            comprehensive view of the product I'm working on to understand every
+            side of your project and best meet your needs by providing
+            tailor-made solutions. <br /><br />
+            Need to start a project from scratch or need occasional support? Why
+            not take some time to discuss it?
           </p>
+        </div>
+        <div class="about-social">
+          <a
+            href="https://www.linkedin.com/in/joris-lefait/"
+            target="_blank"
+            class="social-btn linkedin"
+          >
+            <i class="fab fa-linkedin"></i> LinkedIn
+          </a>
+          <a
+            href="https://www.malt.fr/profile/jorislefait"
+            target="_blank"
+            class="social-btn malt"
+          >
+            <i class="fas fa-globe"></i> Malt
+          </a>
+          <a
+            href="https://github.com/Joris-Lft"
+            target="_blank"
+            class="social-btn github"
+          >
+            <i class="fab fa-github"></i> GitHub
+          </a>
+          <a
+            href="https://medium.com/@joris.l"
+            target="_blank"
+            class="social-btn medium"
+          >
+            <i class="fab fa-medium"></i> Medium
+          </a>
         </div>
       </section>
 
